<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_menu_preferences_short">Prefs</string>
    <string name="main_menu_preferences"></string>
    <string name="main_menu_play_short">Play</string>
    <string name="main_menu_play">Play the game</string>
    <string name="main_menu_retry_short">Retry</string>
    <string name="main_menu_retry">Retry server</string>
    <string name="hello">Hello World, HomeActivity!</string>
    <string name="app_name">ExplodingPlaces</string>

<string-array name="preferences_poll_interval_names"><item>Short (5s)</item>
<item>Medium (15s)</item>
<item>Long (30s)</item>
</string-array>

<string-array name="preferences_poll_interval_values"><item>5000</item>
<item>15000</item>
<item>30000</item>
</string-array>
</resources>
