<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:visible="true" android:id="@+id/main_menu_retry" android:titleCondensed="@string/main_menu_retry_short" android:title="@string/main_menu_retry" android:enabled="false"></item>
<item android:visible="true" android:id="@+id/main_menu_play" android:titleCondensed="@string/main_menu_play_short" android:title="@string/main_menu_play" android:enabled="false"></item>
<item android:id="@+id/main_menu_preferences" android:title="@string/main_menu_preferences" android:visible="true" android:enabled="true" android:titleCondensed="@string/main_menu_preferences_short"></item>
<item android:id="@+id/main_menu_gps" android:titleCondensed="GPS" android:menuCategory="secondary" android:title="GPS Status" android:icon="@drawable/gps"></item>
<item android:id="@+id/main_menu_player_status" android:title="Player Status" android:menuCategory="secondary" android:titleCondensed="Player"></item>
</menu>
